test/nonLiftedIndexReplacement1.slq

def bad[n:!â„•](x:int[n]){
	x[0]:=H(x[0]);
	return x;
}

def main(){
	xs:=(0,0):ğ”¹^2;
	i:=0:int[1];
	xs[bad(i)]:=X(xs[bad(i)]); /// error
}
